@@ -50,8 +50,8 @@ def test_read_type_basic():
     r = Read()
     s = Record()
     for attr in ('sequence', 'name', 'quality', 'annotations'):
-        assert hasattr(r, attr) == False, attr
-        assert hasattr(s, attr) == False, attr
+        assert not hasattr(r, attr), attr
+        assert not hasattr(s, attr), attr
 
 
 def test_read_type_attributes():
@@ -71,7 +71,8 @@ def test_read_properties():
     for read in rparser:
         assert read.name == "895:1:1:1246:14654 1:N:0:NNNNN"
         assert read.sequence == "CAGGCGCCCACCACCGTGCCCTCCAACCTGATGGT"
-        assert read.annotations == ""
+        # if an attribute is empty it shouldn't exist
+        assert not hasattr(read, 'annotations')
         assert read.quality == """][aaX__aa[`ZUZ[NONNFNNNNNO_____^RQ_"""
 
 
